# yen-recruitment-agent

./: .env.example  .gitignore  Dockerfile  agent-prompts.md.txt  agent-workflow.md.txt  agents.md.txt  alembic.ini  count_divs.py  database-schema.md.txt  development-phases.md.txt  docker-compose.yml  edit_hrdashboard.py  folder-structure.md.txt  project-objective.md.txt  pyproject.toml  run_demo.py  seed_users.py  state-machine.md.txt  system-architecture.md.txt  tech-stack.md.txt  test_columns.py
alembic/: env.py
alembic/versions/: 0001_initial_schema.py  f273a5078cc6_add_file_data_to_resume.py
app/: config.json  main.py  scratch_check_db.py  smtp_mock_server.py  test_serper.py
app/agents/: __init__.py  assessment.py  base.py  discovery.py  hiring_decision.py  interviewer.py  orchestrator.py  resume_parser.py
app/api/: router.py
app/api/v1/: auth.py  interview.py  recruitment.py  resume.py
app/core/: config.py  security.py
app/db/: base.py  base_class.py  session.py
app/email_templates/: offer_letter.html  rejection.html  scheduling_interview.html
app/graphs/: checkpointer.py  interview_flow.py  recruitment_flow.py  state.py
app/models/: __init__.py  candidate.py  interview.py  job.py  user.py
app/schemas/: auth.py
app/services/: notifications.py
web/: next.config.ts
web/src/app/: globals.css  layout.tsx  page.tsx
web/src/components/auth/: AuthContainer.tsx  ForgotPassword.tsx  ResetPassword.tsx  SignIn.tsx  SignUp.tsx
web/src/hooks/: useProctoring.ts
web/src/types/: index.ts
web/src/utils/: api.ts
(+3 files in other folders)
