[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "recruitment-platform"
version = "0.1.0"
description = "Multi-agent AI Recruitment Platform powered by LangGraph, FastAPI, and PostgreSQL pgvector"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.28.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
    "python-multipart>=0.0.9",
    "sqlalchemy[asyncio]>=2.0.28",
    "asyncpg>=0.29.0",
    "psycopg2-binary>=2.9.9",
    "alembic>=1.13.1",
    "pgvector>=0.2.5",
    "redis>=5.0.3",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "langgraph>=0.0.30",
    "langchain>=0.1.13",
    "langchain-openai>=0.1.1",
    "langchain-anthropic>=0.1.4",
    "openai>=1.14.0",
    "anthropic>=0.21.0",
    "instructor>=1.2.0",
    "pymupdf>=1.24.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.1.1",
    "pytest-asyncio>=0.23.6",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
